# Overlay-MMO

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: generate-lockfile.yml  pr-windows.yml  release-windows.yml
docs/: README.md  ROADMAP.md  Roadmap.md
docs/phases/: phase-5-1-widgetspec.md  phase-5-2-safe-formulas.md  phase-5-3-5-4-builder.md  phase-5-5-5-6-persistence-and-snapshots.md
overlay-mmo/: package.json
overlay-mmo/src/main/: main.ts
overlay-mmo/src/renderer/: App.tsx  PlanRenderer.tsx  index.html  planSchema.ts  styles.css
overlay-mmo/src/shared/: ipc.ts
profiles/: example.json
scripts/: package.cjs  validate-safe-formula.ts  validate-widgetspec.ts
src/: App.tsx  main.tsx  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/builder/: extractors.ts  intent.ts  questions.ts  widgetBuilderEngine.ts  widgetTemplates.ts
src/components/: ClockWidget.tsx  ExpTracker.tsx  Phase1ManualData.tsx  StatusWidget.tsx
src/components/Composer/: ChatComposer.tsx
src/lib/: db.ts  tauriSql.ts
src/main/: llmComposer.ts  logging.ts  main.ts  ocr.ts  ocrPreprocess.ts  storage.ts
src/preload/: preload.ts
src/renderer/: App.tsx  PlanRenderer.tsx  planner.ts  styles.css
src/shared/: eventLogSchema.ts  ipc.ts  memorySchema.ts  planSchema.ts  planValidation.ts  rulesSchema.ts
src/state/: planStore.ts
src/widgetSpec/: index.ts  migrateLegacyPlan.ts  safeFormula.ts  widgetSpec.ts
(+9 files in other folders)
